Init dx 11 device; and rendering a simple triangle

--- a/Win32Project1test/Win32Project1test/Win32Project1test.vcxproj
+++ b/Win32Project1test/Win32Project1test/Win32Project1test.vcxproj
@@ -72,6 +72,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -91,6 +93,8 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <AdditionalLibraryDirectories>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>dxgi.lib;d3d11.lib;d3dx11.lib;d3dx10.lib;dxerr.lib;legacy_stdio_definitions.lib;dinput8.lib;dxguid.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -138,15 +142,25 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ColorShader.h" />
+    <ClInclude Include="D3D11Device.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="MainApp.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SimpleCamera.h" />
+    <ClInclude Include="SimpleModel.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Value.h" />
     <ClInclude Include="Win32Project1test.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ColorShader.cpp" />
+    <ClCompile Include="D3D11Device.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="MainApp.cpp" />
+    <ClCompile Include="SimpleCamera.cpp" />
+    <ClCompile Include="SimpleModel.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -161,6 +175,10 @@
   <ItemGroup>
     <Image Include="small.ico" />
     <Image Include="Win32Project1test.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\Colorps.fx" />
+    <None Include="Shaders\Colorvs.fx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
